# starq-ros2

./: Dockerfile  run-ros2.sh
starq_ros2/: CMakeLists.txt  package.xml
starq_ros2/include/starq_ros2/: leg_controller_node.hpp  motor_controller_node.hpp  odrive_controller_node.hpp
starq_ros2/src/: starq_node.cpp
